css/style.css
/* FONT FAMILY */
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');

body {
    font-family: 'Roboto', sans-serif;
}

/* COLOR PALETTE */
:root {
   --white: #FFFFFF;
   --dark-blue: #141922;
   --black: #000000;
   --grey-800: #282828;
   --grey-600: #6E6E6E;
   --grey-400: #A3A3A3;
   --grey-200: #D2D2D2;
   --lime: #ADFF2F;
}

/* RESET RULES */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img {
    max-width: 100%;
}

figure > img {
    display: block;
}

ul,
ol,
menu {
    list-style: none;
}

a {
    text-decoration: none;
    color: currentColor;
    display: inline-block;
}

/* UTILITY CLASSES */
.items-center {
    align-items: center;
}

.text-white {
    color: var(--white);
}


/* #APP STYLING */
#app {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

/* .MAIN-CONTENT STYLING */
#app .main-content {
    flex-grow: 1;
    display: flex;
    background-color: var(--dark-blue);
}

/* .NAVBAR STYLING */
.main-content .navbar {
    flex-basis: 50px;
    flex-shrink: 0;
    background-color: var(--black);
}

/* .PAGE-FOCUS STYLING */
.main-content .page-focus {
    flex-grow: 1;
    overflow: auto;
}

/* .TOOL-BAR STYLING */
#app .tool-bar {
    background-color: var(--grey-800);
    padding: 12px 10px;
}

.tool-bar .tools {
    display: flex;
    justify-content: space-between;
}

.tool.song-tool {
    display: flex;
    gap: 11px;
}

.tool.song-tool .thumbnail-song img {
    height: 28px;
}

.tool.song-tool .thumbnail-description .album-name {
    font-size: 13px;
}

.thumbnail-description .song-details {
    color: var(--grey-400);
    font-size: 11px;
    font-weight: 700;
}

.thumbnail-description .song-details:hover {
    text-decoration: underline;
    color: var(--white);
}

.tool.song-tool .song-cta {
    display: flex;
    flex-direction: column;
    gap: 6px;
    font-size: 14px;
    color: var(--grey-400);
}

.tool.song-tool .song-cta .button:hover {
    color: var(--white);
}

.tool.control-tools {
    width: 37%;
    max-width: 550px;
}

.tool.control-tools .player-controls{
    display: flex;
    gap: 22px;
    justify-content: center;
}

.tool.control-tools .player-controls .play {
    font-size: 30px;
    padding: 0 10px;
}

.tool.control-tools .player-controls .play:hover {
    transform: scale(1.1);
    cursor: pointer;
}

.tool.control-tools .timeline {
    display: flex;
    gap: 10px;
    font-size: 11px;
    margin-top: 13px;
    font-weight: 700;
}

.tool.volume-tool {
    display: flex;
    gap: 7px;
    width: 30%;
    max-width: 210px;
    font-size: 13px;
}

.song-line {
    flex-grow: 1;
    height: 4px;
    border-radius: 5px;
    background-color: var(--grey-600);
    position: relative;
    cursor: pointer;
}

.song-line .hover-line {
    position: absolute;
    left: 0;
    width: 60%;
    height: 4px;
    background-color: var(--grey-400);
    border-radius: 5px;
}

.song-line:hover .hover-line {
    background-color: var(--lime);
}

.song-line:hover .dot {
    display: initial;
}

.hover-line .dot {
    position: absolute;
    right: -2px;
    bottom: -4px;
    height: 12px;
    width: 12px;
    border-radius: 50%;
    background-color: var(--white);
    display: none;
}

/* NAVBAR STYLING */
/* .main-content .navbar {
    padding: 5px 11px 10px 11px;
}

.logo .big-logo {
    height: 42px;
    display: none;
}

.logo .small-logo {
    height: 28px;
} */

/* MEDIA QUERIES */
@media screen and (min-width: 768px) {
    .main-content .navbar {
        flex-basis: 230px;
    }

    .tool.song-tool .song-cta {
        flex-direction: row;
    }

    .tool.song-tool .thumbnail-song img {
        height: 42px;
    }

    .tool.song-tool .thumbnail-description span {
        display: initial;
    }

    .navbar .logo .small-logo {
        display: none;
    }

    .navbar .logo .big-logo {
        display: block;
    }

    .main-content .navbar {
        padding: 20px 21px 5px 21px;
    }
}






/* debug */
/* 
.debug #app {
    border: 5px solid red;
}

.debug .main-content {
    border: 3px solid green;
}
*/
/* .debug .tool-bar {
    padding: 20px 0;
}  */

/* .debug .tool {
    border: 2px solid greenyellow;
} */

